# nvim-release-tui

./: LICENSE  README.md  cabal.project.local  nvim-release-tui.cabal
app/: Main.hs
